--- a/deployment-strategies/Dockerfile
+++ b/deployment-strategies/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:18-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci --only=production
+RUN npm ci --omit=dev
 
 FROM node:18-alpine
 WORKDIR /app
